// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BloccoRiepilogo /> should render a <div> 1`] = `
.c0 {
  padding: 20px;
  border-radius: 6px;
}

<HtmlBlock
  className="c0"
  theme={
    Object {
      "radius": Object {
        "general": "6px",
      },
    }
  }
/>
`;

exports[`<BloccoRiepilogo /> should render its css w/ props radius 1`] = `
.c0 {
  padding: 20px;
  border-radius: 40px;
}

<HtmlBlock
  className="c0"
  radius="40px"
  theme={
    Object {
      "radius": Object {
        "general": "6px",
      },
    }
  }
/>
`;

exports[`<BloccoRiepilogo /> should render its css w/ props theme 1`] = `
.c0 {
  padding: 20px;
  border-radius: 30px;
}

<HtmlBlock
  className="c0"
  theme={
    Object {
      "radius": Object {
        "general": "30px",
      },
    }
  }
/>
`;

exports[`<UnitaEsecuzioneView /> Mostra lo stato iniziale 1`] = `
<FlexBox__FlexWrap>
  <EsecuzioneSteps
    apriModalBox={[Function]}
    chiudiModalBox={[Function]}
    correzioneRisposta={
      Object {
        "correzioneStep": Object {
          "corrette": Array [],
          "sbagliate": Array [],
          "soluzione": Array [],
        },
        "isCheckable": true,
        "isChecked": true,
        "isCorrect": true,
        "isFocusEnabled": undefined,
        "isHelpEnabled": false,
        "isInterfaceLocked": true,
        "isPristine": true,
        "mostraCorrezione": true,
        "mostraSoluzione": true,
        "risposteInizializza": undefined,
      }
    }
    correzioneRispostaFx={[Function]}
    disableAutofocus={false}
    funzioneSelezionaRisposta={[Function]}
    hasCorreggi={false}
    hasHelp={false}
    hasLessico={true}
    helpButtonFunction={[Function]}
    key="esecuzione_unita_step_3_1"
    stepCaricato={
      Object {
        "esercizi": Array [
          Object {
            "continua": false,
            "distrattore_1": "passivo",
            "distrattore_2": "imperfetto",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": false,
            "form": Array [
              "imperfetto",
              "passivo",
              "attivo",
              "presente",
            ],
            "html": null,
            "id": 94635,
            "ignora_lessico": false,
            "inputLessicale": Array [],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "attivo",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "presente",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": "N",
            "titolo": "Analizza il tempo e la diatesi",
            "traduci": Array [],
          },
        ],
        "isStepLoaded": true,
        "nextStep": Object {
          "esercizi": Array [
            Object {
              "continua": false,
              "distrattore_1": "genitivo",
              "distrattore_2": "dativo",
              "distrattore_3": "ablativo",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": false,
              "form": Array [
                "nominativo",
                "genitivo",
                "ablativo",
                "dativo",
              ],
              "html": null,
              "id": 94637,
              "ignora_lessico": false,
              "inputLessicale": Array [],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "nominativo",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": "M",
              "titolo": "Analizza il caso",
              "traduci": Array [],
            },
          ],
          "numeroStepCompletati": 3,
          "stepId": 4,
          "testi": Array [
            Object {
              "continua": false,
              "distrattore_1": "",
              "distrattore_2": "",
              "distrattore_3": "",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": true,
              "form": null,
              "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span>, <span class=\\"contesto\\"><span lessico=\\"stellae\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> </span><span lessico=\\"fulgent\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
              "id": 94636,
              "ignora_lessico": false,
              "inputLessicale": Array [
                Object {
                  "focus": false,
                  "forma": "luna",
                  "lemma": "luna",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "luna",
                },
                Object {
                  "focus": false,
                  "forma": "splendet",
                  "lemma": "splendeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "splendere",
                },
                Object {
                  "focus": false,
                  "forma": "stellae",
                  "lemma": "stella",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "stella",
                },
                Object {
                  "focus": false,
                  "forma": "fulgent",
                  "lemma": "fulgeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "brillare",
                },
              ],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "Luna splendet, <span class=\\"contesto\\">stellae</span> fulgent.",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": false,
              "titolo": null,
              "traduci": Array [],
            },
          ],
        },
        "numeroStepCompletati": 2,
        "stepId": 3,
        "testi": Array [
          Object {
            "continua": false,
            "distrattore_1": "",
            "distrattore_2": "",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": true,
            "form": null,
            "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span class=\\"contesto\\"><span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span> </span><span lessico=\\"\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\"></span>, <span lessico=\\"stellae\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> <span lessico=\\"fulgent\\" idx=\\"4\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
            "id": 94634,
            "ignora_lessico": false,
            "inputLessicale": Array [
              Object {
                "focus": false,
                "forma": "luna",
                "lemma": "luna",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "luna",
              },
              Object {
                "focus": false,
                "forma": "splendet",
                "lemma": "splendeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "splendere",
              },
              Object {
                "focus": false,
                "forma": "stellae",
                "lemma": "stella",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "stella",
              },
              Object {
                "focus": false,
                "forma": "fulgent",
                "lemma": "fulgeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "brillare",
              },
            ],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "Luna <span class=\\"contesto\\">splendet</span>, stellae fulgent.",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": false,
            "titolo": null,
            "traduci": Array [],
          },
        ],
      }
    }
    stepEseguiti={2}
    toggleFocusFunction={[Function]}
    topBarParams={
      Object {
        "closeBtn": Object {
          "enabled": true,
          "onClickFunction": [Function],
          "url": "#",
        },
        "rightBtn": Object {
          "enabled": true,
          "icon": "lesson",
          "url": "/lezione/444/unita-esecuzione",
        },
        "score": "",
      }
    }
  />
  <LogoPlatform
    desktopOnly={true}
    execLogo={true}
    margin="0 0 20px"
    product="alatin"
  />
</FlexBox__FlexWrap>
`;

exports[`<UnitaEsecuzioneView /> Mostra uno spinner se attivo 1`] = `
<FlexBox__FlexWrap>
  <Spinner
    number={3}
  />
  <LogoPlatform
    desktopOnly={true}
    execLogo={true}
    margin="0 0 20px"
    product="alatin"
  />
</FlexBox__FlexWrap>
`;

exports[`<UnitaEsecuzioneView /> Mostra uno spinner se contenutoUnita.isLoaded == false 1`] = `
<FlexBox__FlexWrap>
  <Spinner
    number={3}
  />
  <LogoPlatform
    desktopOnly={true}
    execLogo={true}
    margin="0 0 20px"
    product="alatin"
  />
</FlexBox__FlexWrap>
`;

exports[`<UnitaEsecuzioneView /> correzioneRispostaFx chiama onStepNext se interfaceLocked = false 1`] = `
<FlexBox__FlexWrap>
  <EsecuzioneSteps
    apriModalBox={[Function]}
    chiudiModalBox={[Function]}
    correzioneRisposta={
      Object {
        "correzioneStep": Object {
          "corrette": Array [],
          "sbagliate": Array [],
          "soluzione": Array [],
        },
        "isCheckable": true,
        "isChecked": true,
        "isCorrect": true,
        "isFocusEnabled": undefined,
        "isHelpEnabled": false,
        "isInterfaceLocked": false,
        "isPristine": true,
        "mostraCorrezione": true,
        "mostraSoluzione": true,
        "risposteInizializza": undefined,
      }
    }
    correzioneRispostaFx={[Function]}
    disableAutofocus={false}
    funzioneSelezionaRisposta={[Function]}
    hasCorreggi={false}
    hasHelp={false}
    hasLessico={true}
    helpButtonFunction={[Function]}
    key="esecuzione_unita_step_3_0"
    stepCaricato={
      Object {
        "esercizi": Array [
          Object {
            "continua": false,
            "distrattore_1": "passivo",
            "distrattore_2": "imperfetto",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": false,
            "form": Array [
              "imperfetto",
              "passivo",
              "attivo",
              "presente",
            ],
            "html": null,
            "id": 94635,
            "ignora_lessico": false,
            "inputLessicale": Array [],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "attivo",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "presente",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": "N",
            "titolo": "Analizza il tempo e la diatesi",
            "traduci": Array [],
          },
        ],
        "isStepLoaded": true,
        "nextStep": Object {
          "esercizi": Array [
            Object {
              "continua": false,
              "distrattore_1": "genitivo",
              "distrattore_2": "dativo",
              "distrattore_3": "ablativo",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": false,
              "form": Array [
                "nominativo",
                "genitivo",
                "ablativo",
                "dativo",
              ],
              "html": null,
              "id": 94637,
              "ignora_lessico": false,
              "inputLessicale": Array [],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "nominativo",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": "M",
              "titolo": "Analizza il caso",
              "traduci": Array [],
            },
          ],
          "numeroStepCompletati": 3,
          "stepId": 4,
          "testi": Array [
            Object {
              "continua": false,
              "distrattore_1": "",
              "distrattore_2": "",
              "distrattore_3": "",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": true,
              "form": null,
              "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span>, <span class=\\"contesto\\"><span lessico=\\"stellae\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> </span><span lessico=\\"fulgent\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
              "id": 94636,
              "ignora_lessico": false,
              "inputLessicale": Array [
                Object {
                  "focus": false,
                  "forma": "luna",
                  "lemma": "luna",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "luna",
                },
                Object {
                  "focus": false,
                  "forma": "splendet",
                  "lemma": "splendeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "splendere",
                },
                Object {
                  "focus": false,
                  "forma": "stellae",
                  "lemma": "stella",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "stella",
                },
                Object {
                  "focus": false,
                  "forma": "fulgent",
                  "lemma": "fulgeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "brillare",
                },
              ],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "Luna splendet, <span class=\\"contesto\\">stellae</span> fulgent.",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": false,
              "titolo": null,
              "traduci": Array [],
            },
          ],
        },
        "numeroStepCompletati": 2,
        "stepId": 3,
        "testi": Array [
          Object {
            "continua": false,
            "distrattore_1": "",
            "distrattore_2": "",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": true,
            "form": null,
            "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span class=\\"contesto\\"><span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span> </span><span lessico=\\"\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\"></span>, <span lessico=\\"stellae\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> <span lessico=\\"fulgent\\" idx=\\"4\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
            "id": 94634,
            "ignora_lessico": false,
            "inputLessicale": Array [
              Object {
                "focus": false,
                "forma": "luna",
                "lemma": "luna",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "luna",
              },
              Object {
                "focus": false,
                "forma": "splendet",
                "lemma": "splendeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "splendere",
              },
              Object {
                "focus": false,
                "forma": "stellae",
                "lemma": "stella",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "stella",
              },
              Object {
                "focus": false,
                "forma": "fulgent",
                "lemma": "fulgeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "brillare",
              },
            ],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "Luna <span class=\\"contesto\\">splendet</span>, stellae fulgent.",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": false,
            "titolo": null,
            "traduci": Array [],
          },
        ],
      }
    }
    stepEseguiti={2}
    toggleFocusFunction={[Function]}
    topBarParams={
      Object {
        "closeBtn": Object {
          "enabled": true,
          "onClickFunction": [Function],
          "url": "#",
        },
        "rightBtn": Object {
          "enabled": true,
          "icon": "lesson",
          "url": "/lezione/444/unita-esecuzione",
        },
        "score": "",
      }
    }
  />
  <LogoPlatform
    desktopOnly={true}
    execLogo={true}
    margin="0 0 20px"
    product="alatin"
  />
</FlexBox__FlexWrap>
`;

exports[`<UnitaEsecuzioneView /> correzioneRispostaFx chiama onStepNext se interfaceLocked 1`] = `
<FlexBox__FlexWrap>
  <EsecuzioneSteps
    apriModalBox={[Function]}
    chiudiModalBox={[Function]}
    correzioneRisposta={
      Object {
        "correzioneStep": Object {
          "corrette": Array [],
          "sbagliate": Array [],
          "soluzione": Array [],
        },
        "isCheckable": true,
        "isChecked": true,
        "isCorrect": true,
        "isFocusEnabled": undefined,
        "isHelpEnabled": false,
        "isInterfaceLocked": true,
        "isPristine": true,
        "mostraCorrezione": true,
        "mostraSoluzione": true,
        "risposteInizializza": undefined,
      }
    }
    correzioneRispostaFx={[Function]}
    disableAutofocus={false}
    funzioneSelezionaRisposta={[Function]}
    hasCorreggi={false}
    hasHelp={false}
    hasLessico={true}
    helpButtonFunction={[Function]}
    key="esecuzione_unita_step_3_1"
    stepCaricato={
      Object {
        "esercizi": Array [
          Object {
            "continua": false,
            "distrattore_1": "passivo",
            "distrattore_2": "imperfetto",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": false,
            "form": Array [
              "imperfetto",
              "passivo",
              "attivo",
              "presente",
            ],
            "html": null,
            "id": 94635,
            "ignora_lessico": false,
            "inputLessicale": Array [],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "attivo",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "presente",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": "N",
            "titolo": "Analizza il tempo e la diatesi",
            "traduci": Array [],
          },
        ],
        "isStepLoaded": true,
        "nextStep": Object {
          "esercizi": Array [
            Object {
              "continua": false,
              "distrattore_1": "genitivo",
              "distrattore_2": "dativo",
              "distrattore_3": "ablativo",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": false,
              "form": Array [
                "nominativo",
                "genitivo",
                "ablativo",
                "dativo",
              ],
              "html": null,
              "id": 94637,
              "ignora_lessico": false,
              "inputLessicale": Array [],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "nominativo",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": "M",
              "titolo": "Analizza il caso",
              "traduci": Array [],
            },
          ],
          "numeroStepCompletati": 3,
          "stepId": 4,
          "testi": Array [
            Object {
              "continua": false,
              "distrattore_1": "",
              "distrattore_2": "",
              "distrattore_3": "",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": true,
              "form": null,
              "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span>, <span class=\\"contesto\\"><span lessico=\\"stellae\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> </span><span lessico=\\"fulgent\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
              "id": 94636,
              "ignora_lessico": false,
              "inputLessicale": Array [
                Object {
                  "focus": false,
                  "forma": "luna",
                  "lemma": "luna",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "luna",
                },
                Object {
                  "focus": false,
                  "forma": "splendet",
                  "lemma": "splendeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "splendere",
                },
                Object {
                  "focus": false,
                  "forma": "stellae",
                  "lemma": "stella",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "stella",
                },
                Object {
                  "focus": false,
                  "forma": "fulgent",
                  "lemma": "fulgeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "brillare",
                },
              ],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "Luna splendet, <span class=\\"contesto\\">stellae</span> fulgent.",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": false,
              "titolo": null,
              "traduci": Array [],
            },
          ],
        },
        "numeroStepCompletati": 2,
        "stepId": 3,
        "testi": Array [
          Object {
            "continua": false,
            "distrattore_1": "",
            "distrattore_2": "",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": true,
            "form": null,
            "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span class=\\"contesto\\"><span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span> </span><span lessico=\\"\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\"></span>, <span lessico=\\"stellae\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> <span lessico=\\"fulgent\\" idx=\\"4\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
            "id": 94634,
            "ignora_lessico": false,
            "inputLessicale": Array [
              Object {
                "focus": false,
                "forma": "luna",
                "lemma": "luna",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "luna",
              },
              Object {
                "focus": false,
                "forma": "splendet",
                "lemma": "splendeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "splendere",
              },
              Object {
                "focus": false,
                "forma": "stellae",
                "lemma": "stella",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "stella",
              },
              Object {
                "focus": false,
                "forma": "fulgent",
                "lemma": "fulgeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "brillare",
              },
            ],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "Luna <span class=\\"contesto\\">splendet</span>, stellae fulgent.",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": false,
            "titolo": null,
            "traduci": Array [],
          },
        ],
      }
    }
    stepEseguiti={2}
    toggleFocusFunction={[Function]}
    topBarParams={
      Object {
        "closeBtn": Object {
          "enabled": true,
          "onClickFunction": [Function],
          "url": "#",
        },
        "rightBtn": Object {
          "enabled": true,
          "icon": "lesson",
          "url": "/lezione/444/unita-esecuzione",
        },
        "score": "",
      }
    }
  />
  <LogoPlatform
    desktopOnly={true}
    execLogo={true}
    margin="0 0 20px"
    product="alatin"
  />
</FlexBox__FlexWrap>
`;

exports[`<UnitaEsecuzioneView /> testo il contenuto se interfaccia bloccata 1`] = `
<FlexBox__FlexWrap>
  <EsecuzioneSteps
    apriModalBox={[Function]}
    chiudiModalBox={[Function]}
    correzioneRisposta={
      Object {
        "correzioneStep": Object {
          "corrette": Array [],
          "sbagliate": Array [],
          "soluzione": Array [],
        },
        "isCheckable": true,
        "isChecked": true,
        "isCorrect": true,
        "isFocusEnabled": undefined,
        "isHelpEnabled": false,
        "isInterfaceLocked": true,
        "isPristine": true,
        "mostraCorrezione": true,
        "mostraSoluzione": true,
        "risposteInizializza": undefined,
      }
    }
    correzioneRispostaFx={[Function]}
    disableAutofocus={false}
    funzioneSelezionaRisposta={[Function]}
    hasCorreggi={false}
    hasHelp={false}
    hasLessico={true}
    helpButtonFunction={[Function]}
    key="esecuzione_unita_step_3_1"
    stepCaricato={
      Object {
        "esercizi": Array [
          Object {
            "continua": false,
            "distrattore_1": "passivo",
            "distrattore_2": "imperfetto",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": false,
            "form": Array [
              "imperfetto",
              "passivo",
              "attivo",
              "presente",
            ],
            "html": null,
            "id": 94635,
            "ignora_lessico": false,
            "inputLessicale": Array [],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "attivo",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "presente",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": "N",
            "titolo": "Analizza il tempo e la diatesi",
            "traduci": Array [],
          },
        ],
        "isStepLoaded": true,
        "nextStep": Object {
          "esercizi": Array [
            Object {
              "continua": false,
              "distrattore_1": "genitivo",
              "distrattore_2": "dativo",
              "distrattore_3": "ablativo",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": false,
              "form": Array [
                "nominativo",
                "genitivo",
                "ablativo",
                "dativo",
              ],
              "html": null,
              "id": 94637,
              "ignora_lessico": false,
              "inputLessicale": Array [],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "nominativo",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": "M",
              "titolo": "Analizza il caso",
              "traduci": Array [],
            },
          ],
          "numeroStepCompletati": 3,
          "stepId": 4,
          "testi": Array [
            Object {
              "continua": false,
              "distrattore_1": "",
              "distrattore_2": "",
              "distrattore_3": "",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": true,
              "form": null,
              "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span>, <span class=\\"contesto\\"><span lessico=\\"stellae\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> </span><span lessico=\\"fulgent\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
              "id": 94636,
              "ignora_lessico": false,
              "inputLessicale": Array [
                Object {
                  "focus": false,
                  "forma": "luna",
                  "lemma": "luna",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "luna",
                },
                Object {
                  "focus": false,
                  "forma": "splendet",
                  "lemma": "splendeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "splendere",
                },
                Object {
                  "focus": false,
                  "forma": "stellae",
                  "lemma": "stella",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "stella",
                },
                Object {
                  "focus": false,
                  "forma": "fulgent",
                  "lemma": "fulgeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "brillare",
                },
              ],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "Luna splendet, <span class=\\"contesto\\">stellae</span> fulgent.",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": false,
              "titolo": null,
              "traduci": Array [],
            },
          ],
        },
        "numeroStepCompletati": 2,
        "stepId": 3,
        "testi": Array [
          Object {
            "continua": false,
            "distrattore_1": "",
            "distrattore_2": "",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": true,
            "form": null,
            "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span class=\\"contesto\\"><span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span> </span><span lessico=\\"\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\"></span>, <span lessico=\\"stellae\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> <span lessico=\\"fulgent\\" idx=\\"4\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
            "id": 94634,
            "ignora_lessico": false,
            "inputLessicale": Array [
              Object {
                "focus": false,
                "forma": "luna",
                "lemma": "luna",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "luna",
              },
              Object {
                "focus": false,
                "forma": "splendet",
                "lemma": "splendeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "splendere",
              },
              Object {
                "focus": false,
                "forma": "stellae",
                "lemma": "stella",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "stella",
              },
              Object {
                "focus": false,
                "forma": "fulgent",
                "lemma": "fulgeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "brillare",
              },
            ],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "Luna <span class=\\"contesto\\">splendet</span>, stellae fulgent.",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": false,
            "titolo": null,
            "traduci": Array [],
          },
        ],
      }
    }
    stepEseguiti={2}
    toggleFocusFunction={[Function]}
    topBarParams={
      Object {
        "closeBtn": Object {
          "enabled": true,
          "onClickFunction": [Function],
          "url": "#",
        },
        "rightBtn": Object {
          "enabled": true,
          "icon": "lesson",
          "url": "/lezione/444/unita-esecuzione",
        },
        "score": "",
      }
    }
  />
  <LogoPlatform
    desktopOnly={true}
    execLogo={true}
    margin="0 0 20px"
    product="alatin"
  />
</FlexBox__FlexWrap>
`;

exports[`<UnitaEsecuzioneView /> topBarParams se docente 1`] = `
<FlexBox__FlexWrap>
  <EsecuzioneSteps
    apriModalBox={[Function]}
    chiudiModalBox={[Function]}
    correzioneRisposta={
      Object {
        "correzioneStep": Object {
          "corrette": Array [],
          "sbagliate": Array [],
          "soluzione": Array [],
        },
        "isCheckable": true,
        "isChecked": true,
        "isCorrect": true,
        "isFocusEnabled": undefined,
        "isHelpEnabled": false,
        "isInterfaceLocked": true,
        "isPristine": true,
        "mostraCorrezione": true,
        "mostraSoluzione": true,
        "risposteInizializza": undefined,
      }
    }
    correzioneRispostaFx={[Function]}
    disableAutofocus={false}
    funzioneSelezionaRisposta={[Function]}
    hasCorreggi={false}
    hasHelp={false}
    hasLessico={true}
    helpButtonFunction={[Function]}
    key="esecuzione_unita_step_3_1"
    stepCaricato={
      Object {
        "esercizi": Array [
          Object {
            "continua": false,
            "distrattore_1": "passivo",
            "distrattore_2": "imperfetto",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": false,
            "form": Array [
              "imperfetto",
              "passivo",
              "attivo",
              "presente",
            ],
            "html": null,
            "id": 94635,
            "ignora_lessico": false,
            "inputLessicale": Array [],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "attivo",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "presente",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": "N",
            "titolo": "Analizza il tempo e la diatesi",
            "traduci": Array [],
          },
        ],
        "isStepLoaded": true,
        "nextStep": Object {
          "esercizi": Array [
            Object {
              "continua": false,
              "distrattore_1": "genitivo",
              "distrattore_2": "dativo",
              "distrattore_3": "ablativo",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": false,
              "form": Array [
                "nominativo",
                "genitivo",
                "ablativo",
                "dativo",
              ],
              "html": null,
              "id": 94637,
              "ignora_lessico": false,
              "inputLessicale": Array [],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "nominativo",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": "M",
              "titolo": "Analizza il caso",
              "traduci": Array [],
            },
          ],
          "numeroStepCompletati": 3,
          "stepId": 4,
          "testi": Array [
            Object {
              "continua": false,
              "distrattore_1": "",
              "distrattore_2": "",
              "distrattore_3": "",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": true,
              "form": null,
              "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span>, <span class=\\"contesto\\"><span lessico=\\"stellae\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> </span><span lessico=\\"fulgent\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
              "id": 94636,
              "ignora_lessico": false,
              "inputLessicale": Array [
                Object {
                  "focus": false,
                  "forma": "luna",
                  "lemma": "luna",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "luna",
                },
                Object {
                  "focus": false,
                  "forma": "splendet",
                  "lemma": "splendeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "splendere",
                },
                Object {
                  "focus": false,
                  "forma": "stellae",
                  "lemma": "stella",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "stella",
                },
                Object {
                  "focus": false,
                  "forma": "fulgent",
                  "lemma": "fulgeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "brillare",
                },
              ],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "Luna splendet, <span class=\\"contesto\\">stellae</span> fulgent.",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": false,
              "titolo": null,
              "traduci": Array [],
            },
          ],
        },
        "numeroStepCompletati": 2,
        "stepId": 3,
        "testi": Array [
          Object {
            "continua": false,
            "distrattore_1": "",
            "distrattore_2": "",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": true,
            "form": null,
            "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span class=\\"contesto\\"><span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span> </span><span lessico=\\"\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\"></span>, <span lessico=\\"stellae\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> <span lessico=\\"fulgent\\" idx=\\"4\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
            "id": 94634,
            "ignora_lessico": false,
            "inputLessicale": Array [
              Object {
                "focus": false,
                "forma": "luna",
                "lemma": "luna",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "luna",
              },
              Object {
                "focus": false,
                "forma": "splendet",
                "lemma": "splendeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "splendere",
              },
              Object {
                "focus": false,
                "forma": "stellae",
                "lemma": "stella",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "stella",
              },
              Object {
                "focus": false,
                "forma": "fulgent",
                "lemma": "fulgeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "brillare",
              },
            ],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "Luna <span class=\\"contesto\\">splendet</span>, stellae fulgent.",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": false,
            "titolo": null,
            "traduci": Array [],
          },
        ],
      }
    }
    stepEseguiti={2}
    toggleFocusFunction={[Function]}
    topBarParams={
      Object {
        "closeBtn": Object {
          "enabled": true,
          "onClickFunction": [Function],
          "url": "#",
        },
        "rightBtn": Object {
          "enabled": true,
          "icon": "lesson",
          "url": "/lezione/444/unita-esecuzione",
        },
        "score": "+ 12",
      }
    }
  />
  <LogoPlatform
    desktopOnly={true}
    execLogo={true}
    margin="0 0 20px"
    product="alatin"
  />
</FlexBox__FlexWrap>
`;

exports[`<UnitaEsecuzioneView /> topBarParams se studente 1`] = `
<FlexBox__FlexWrap>
  <EsecuzioneSteps
    apriModalBox={[Function]}
    chiudiModalBox={[Function]}
    correzioneRisposta={
      Object {
        "correzioneStep": Object {
          "corrette": Array [],
          "sbagliate": Array [],
          "soluzione": Array [],
        },
        "isCheckable": true,
        "isChecked": true,
        "isCorrect": true,
        "isFocusEnabled": undefined,
        "isHelpEnabled": false,
        "isInterfaceLocked": true,
        "isPristine": true,
        "mostraCorrezione": true,
        "mostraSoluzione": true,
        "risposteInizializza": undefined,
      }
    }
    correzioneRispostaFx={[Function]}
    disableAutofocus={false}
    funzioneSelezionaRisposta={[Function]}
    hasCorreggi={false}
    hasHelp={false}
    hasLessico={true}
    helpButtonFunction={[Function]}
    key="esecuzione_unita_step_3_1"
    stepCaricato={
      Object {
        "esercizi": Array [
          Object {
            "continua": false,
            "distrattore_1": "passivo",
            "distrattore_2": "imperfetto",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": false,
            "form": Array [
              "imperfetto",
              "passivo",
              "attivo",
              "presente",
            ],
            "html": null,
            "id": 94635,
            "ignora_lessico": false,
            "inputLessicale": Array [],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "attivo",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "presente",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": "N",
            "titolo": "Analizza il tempo e la diatesi",
            "traduci": Array [],
          },
        ],
        "isStepLoaded": true,
        "nextStep": Object {
          "esercizi": Array [
            Object {
              "continua": false,
              "distrattore_1": "genitivo",
              "distrattore_2": "dativo",
              "distrattore_3": "ablativo",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": false,
              "form": Array [
                "nominativo",
                "genitivo",
                "ablativo",
                "dativo",
              ],
              "html": null,
              "id": 94637,
              "ignora_lessico": false,
              "inputLessicale": Array [],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "nominativo",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": "M",
              "titolo": "Analizza il caso",
              "traduci": Array [],
            },
          ],
          "numeroStepCompletati": 3,
          "stepId": 4,
          "testi": Array [
            Object {
              "continua": false,
              "distrattore_1": "",
              "distrattore_2": "",
              "distrattore_3": "",
              "distrattore_4": "",
              "esercizioId": 97552,
              "etichetta_1": null,
              "etichetta_2": null,
              "etichetta_3": null,
              "etichetta_4": null,
              "etichetta_5": null,
              "focus": true,
              "form": null,
              "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span>, <span class=\\"contesto\\"><span lessico=\\"stellae\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> </span><span lessico=\\"fulgent\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
              "id": 94636,
              "ignora_lessico": false,
              "inputLessicale": Array [
                Object {
                  "focus": false,
                  "forma": "luna",
                  "lemma": "luna",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "luna",
                },
                Object {
                  "focus": false,
                  "forma": "splendet",
                  "lemma": "splendeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "splendere",
                },
                Object {
                  "focus": false,
                  "forma": "stellae",
                  "lemma": "stella",
                  "tabelle": null,
                  "tipo": "n",
                  "traduzione": "stella",
                },
                Object {
                  "focus": false,
                  "forma": "fulgent",
                  "lemma": "fulgeo",
                  "tabelle": null,
                  "tipo": "v",
                  "traduzione": "brillare",
                },
              ],
              "italiano": false,
              "parole_gia_ricostruite": "",
              "risposta_1": "",
              "risposta_2": "",
              "risposta_3": "",
              "risposta_4": "",
              "testo_principale": "Luna splendet, <span class=\\"contesto\\">stellae</span> fulgent.",
              "testo_principale_post": "",
              "testo_principale_pre": "",
              "tipo": false,
              "titolo": null,
              "traduci": Array [],
            },
          ],
        },
        "numeroStepCompletati": 2,
        "stepId": 3,
        "testi": Array [
          Object {
            "continua": false,
            "distrattore_1": "",
            "distrattore_2": "",
            "distrattore_3": "",
            "distrattore_4": "",
            "esercizioId": 97552,
            "etichetta_1": null,
            "etichetta_2": null,
            "etichetta_3": null,
            "etichetta_4": null,
            "etichetta_5": null,
            "focus": true,
            "form": null,
            "html": "<span lessico=\\"Luna\\" idx=\\"0\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">Luna</span> <span class=\\"contesto\\"><span lessico=\\"splendet\\" idx=\\"1\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">splendet</span> </span><span lessico=\\"\\" idx=\\"2\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\"></span>, <span lessico=\\"stellae\\" idx=\\"3\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">stellae</span> <span lessico=\\"fulgent\\" idx=\\"4\\" testo=\\"testo\\" show-modal=\\"setModal()\\" tables=\\"updateTables(input)\\">fulgent</span>.",
            "id": 94634,
            "ignora_lessico": false,
            "inputLessicale": Array [
              Object {
                "focus": false,
                "forma": "luna",
                "lemma": "luna",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "luna",
              },
              Object {
                "focus": false,
                "forma": "splendet",
                "lemma": "splendeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "splendere",
              },
              Object {
                "focus": false,
                "forma": "stellae",
                "lemma": "stella",
                "tabelle": null,
                "tipo": "n",
                "traduzione": "stella",
              },
              Object {
                "focus": false,
                "forma": "fulgent",
                "lemma": "fulgeo",
                "tabelle": null,
                "tipo": "v",
                "traduzione": "brillare",
              },
            ],
            "italiano": false,
            "parole_gia_ricostruite": "",
            "risposta_1": "",
            "risposta_2": "",
            "risposta_3": "",
            "risposta_4": "",
            "testo_principale": "Luna <span class=\\"contesto\\">splendet</span>, stellae fulgent.",
            "testo_principale_post": "",
            "testo_principale_pre": "",
            "tipo": false,
            "titolo": null,
            "traduci": Array [],
          },
        ],
      }
    }
    stepEseguiti={2}
    toggleFocusFunction={[Function]}
    topBarParams={
      Object {
        "closeBtn": Object {
          "enabled": true,
          "onClickFunction": [Function],
          "url": "#",
        },
        "rightBtn": Object {
          "enabled": true,
          "icon": "lesson",
          "url": "/lezione/444/unita-esecuzione",
        },
        "score": "",
      }
    }
  />
  <LogoPlatform
    desktopOnly={true}
    execLogo={true}
    margin="0 0 20px"
    product="alatin"
  />
</FlexBox__FlexWrap>
`;
